--- a/src/app/auth/create-password/create-password.component.html
+++ b/src/app/auth/create-password/create-password.component.html
@@ -28,15 +28,15 @@
           <mat-error *ngIf="createPassForm.get('confirmPswd')!.hasError('required')">
             Confirm Password is required
           </mat-error>
-          <mat-error *ngIf="!createPassForm.get('confirmPswd')!.hasError('required') &&
-                             createPassForm.get('confirmPswd')!.hasError('passwordsNotMatching')">
+          <mat-error
+            *ngIf="!createPassForm.get('confirmPswd')!.hasError('required') && createPassForm.get('confirmPswd')!.hasError('passwordsNotMatching')">
             Password and Confirm Password must match
           </mat-error>
         </mat-form-field>
         <div class="text-center">
           <button aria-label="Reset Password" [disabled]="createPassForm!.invalid || loading"
             class="mt-2 btn login-btn">
-            <app-loader [type]="'btn'" *ngIf="loading"></app-loader> <!-- loader -->
+            <app-loader [type]="'btn'" *ngIf="loading"></app-loader>
             Create Password
           </button>
         </div>
