--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -27,7 +27,7 @@
         <div class="text-center">
           <button aria-label="Forgot Password" [disabled]="forgPassForm!.invalid || disabled"
             class="mt-3 btn login-btn">
-            <app-loader [type]="'btn'" *ngIf="disabled"></app-loader> <!-- loader -->
+            <app-loader [type]="'btn'" *ngIf="disabled"></app-loader>
             Forgot Password
           </button>
         </div>
