--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -1,6 +1,6 @@
 <div class="login-ui row mx-0 bg-white">
   <div class="col-md-6 p-0 d-none d-md-block">
-      <app-auth-slides></app-auth-slides>
+    <app-auth-slides></app-auth-slides>
   </div>
   <div class="col-md-6 align-self-center">
     <div *ngIf="resetPassForm">
@@ -28,14 +28,14 @@
           <mat-error *ngIf="resetPassForm.get('confirmPswd')!.hasError('required')">
             Confirm Password is required
           </mat-error>
-          <mat-error *ngIf="!resetPassForm.get('confirmPswd')!.hasError('required') &&
-                             resetPassForm.get('confirmPswd')!.hasError('passwordsNotMatching')">
+          <mat-error
+            *ngIf="!resetPassForm.get('confirmPswd')!.hasError('required') && resetPassForm.get('confirmPswd')!.hasError('passwordsNotMatching')">
             Password and Confirm Password must match
           </mat-error>
         </mat-form-field>
         <div class="text-center">
           <button aria-label="Reset Password" [disabled]="resetPassForm!.invalid || loading" class="mt-2 btn login-btn">
-            <app-loader [type]="'btn'" *ngIf="loading"></app-loader> <!-- loader -->
+            <app-loader [type]="'btn'" *ngIf="loading"></app-loader>
             Reset Password
           </button>
         </div>
