--- a/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
+++ b/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
@@ -87,7 +87,7 @@
       </div>
     </div>
     <div class="text-center mt-5 text-secondary" style="font-size: 20px;" *ngIf="cntntArr.length == 0">
-      No Content Found
+      No Data Found
     </div>
   </ng-container>
 
@@ -144,7 +144,7 @@
       </tbody>
     </table>
     <div class="mx-auto mt-5 text-secondary" style="font-size: 20px;" *ngIf="cntntArr.length == 0">
-      No Content Found
+      No Data Found
     </div>
   </div>
 </div>
