--- a/src/app/web-app/resource/collection/collection-list/collection-list.component.html
+++ b/src/app/web-app/resource/collection/collection-list/collection-list.component.html
@@ -3,7 +3,8 @@
   <h3 class="mb-2 clearfix heading align-self-center">
     Collections
     <div class="float-right">
-      <i class="fa mr-3 curs-ptr align-self-center" [ngClass]="{'fa-list-ul': view, 'fa-th-large': !view}" (click)="view = !view;" matTooltip="{{view? 'List View' : 'Grid View'}}"></i>
+      <i class="fa mr-3 curs-ptr align-self-center" [ngClass]="{'fa-list-ul': view, 'fa-th-large': !view}"
+        (click)="view = !view;" matTooltip="{{view? 'List View' : 'Grid View'}}"></i>
       <button class="btn btn-primary mb-2" (click)="cmnModal('coll', 'add')">New Collection</button>
     </div>
   </h3>
@@ -13,7 +14,9 @@
       {{c.n}}<i class="fa ml-1" [ngClass]="{'fa-sort-up align-bottom': c.asc, 'fa-sort-down align-top': !c.asc}"></i>
     </span>
   </div>
-  <ul ngbNav #fldrNav="ngbNav" [(activeId)]="activeColctn" class="nav-tabs justify-content-end border-bottom border-color-grey mr-3 w-100 pr-2" (activeIdChange)="listColctn()">
+  <ul ngbNav #fldrNav="ngbNav" [(activeId)]="activeColctn"
+    class="nav-tabs justify-content-end border-bottom border-color-grey mr-3 w-100 pr-2"
+    (activeIdChange)="listColctn()">
     <li [ngbNavItem]="1">
       <a ngbNavLink>Active</a>
     </li>
@@ -42,12 +45,15 @@
             </div>
             <div class="options rounded">
               <div class="dropleft">
-                <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true"
+                  aria-expanded="false">
                   <i class="fas fa-share-square"></i>
                 </button>
                 <div class="dropdown-menu" aria-labelledby="shareDD">
-                  <a class="dropdown-item curs-ptr" (click)="cmnModal('email', undefined, colctn)"><i class="fa fa-envelope mr-1"></i>Email</a>
-                  <a class="dropdown-item curs-ptr" (click)="cmnModal('getLink', undefined, colctn)"><i class="fa fa-link mr-1"></i>Get a
+                  <a class="dropdown-item curs-ptr" (click)="cmnModal('email', undefined, colctn)"><i
+                      class="fa fa-envelope mr-1"></i>Email</a>
+                  <a class="dropdown-item curs-ptr" (click)="cmnModal('getLink', undefined, colctn)"><i
+                      class="fa fa-link mr-1"></i>Get a
                     link</a>
                 </div>
               </div>
@@ -55,12 +61,15 @@
                 <i class="mr-1 fas fa-toggle-{{isActiveColctn ? 'off text-primary' : 'on text-success'}}"></i>
               </div>
               <div class="dropleft">
-                <button class="btn" type="button" id="optionsDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn" type="button" id="optionsDD" data-toggle="dropdown" aria-haspopup="true"
+                  aria-expanded="false">
                   <i class="fas fa-ellipsis-h"></i>
                 </button>
                 <div class="dropdown-menu" aria-labelledby="optionsDD">
-                  <a class="dropdown-item curs-ptr" (click)="cmnModal('coll', 'dupl',colctn)"><i class="fas fa-copy mr-1"></i>Duplicate</a>
-                  <a class="dropdown-item curs-ptr" (click)="cmnModal('coll', 'ren',colctn)"><i class="fas fa-edit mr-1"></i>Rename</a>
+                  <a class="dropdown-item curs-ptr" (click)="cmnModal('coll', 'dupl',colctn)"><i
+                      class="fas fa-copy mr-1"></i>Duplicate</a>
+                  <a class="dropdown-item curs-ptr" (click)="cmnModal('coll', 'ren',colctn)"><i
+                      class="fas fa-edit mr-1"></i>Rename</a>
                   <a class="dropdown-item dd">
                     <i class="fa fa-download mr-1"></i>Download
                     <div class="dropdown-menu">
@@ -77,7 +86,7 @@
     </ng-container>
     <ng-template #noColctn>
       <div class="mx-auto mt-5 text-secondary" style="font-size: 20px;">
-        No Collections Found
+        No Data Found
       </div>
     </ng-template>
   </ng-container>
@@ -89,7 +98,8 @@
             <mat-checkbox (change)="selAll($event.checked)"></mat-checkbox>
           </th>
           <th class="border-top-0 curs-ptr" *ngFor="let c of cols, let i = index" (click)="sortChange(c, i)">
-            {{c.n}}<i class="fa ml-1" [ngClass]="{'fa-sort-up align-bottom': c.asc, 'fa-sort-down align-top': !c.asc}"></i>
+            {{c.n}}<i class="fa ml-1"
+              [ngClass]="{'fa-sort-up align-bottom': c.asc, 'fa-sort-down align-top': !c.asc}"></i>
           </th>
           <th class="border-top-0"></th>
         </tr>
@@ -111,12 +121,15 @@
           <td class="align-middle options">
             <div class="d-flex">
               <div class="dropleft">
-                <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true"
+                  aria-expanded="false">
                   <i class="fas fa-share-square"></i>
                 </button>
                 <div class="dropdown-menu" aria-labelledby="shareDD">
-                  <a class="dropdown-item curs-ptr" (click)="cmnModal('email', undefined, colctn)"><i class="fa fa-envelope mr-1"></i>Email</a>
-                  <a class="dropdown-item curs-ptr" (click)="cmnModal('getLink', undefined, colctn)"><i class="fa fa-link mr-1"></i>Get a
+                  <a class="dropdown-item curs-ptr" (click)="cmnModal('email', undefined, colctn)"><i
+                      class="fa fa-envelope mr-1"></i>Email</a>
+                  <a class="dropdown-item curs-ptr" (click)="cmnModal('getLink', undefined, colctn)"><i
+                      class="fa fa-link mr-1"></i>Get a
                     link</a>
                 </div>
               </div>
@@ -124,12 +137,15 @@
                 <i class="mr-1 fas fa-toggle-{{isActiveColctn ? 'off text-primary' : 'on text-success'}}"></i>
               </div>
               <div class="dropleft">
-                <button class="btn" type="button" id="optionsDD" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn" type="button" id="optionsDD" data-toggle="dropdown" aria-haspopup="true"
+                  aria-expanded="false">
                   <i class="fas fa-ellipsis-h"></i>
                 </button>
                 <div class="dropdown-menu" aria-labelledby="optionsDD">
-                  <a class="dropdown-item curs-ptr" (click)="cmnModal('coll', 'dupl',colctn)"><i class="fas fa-copy mr-1"></i>Duplicate</a>
-                  <a class="dropdown-item curs-ptr" (click)="cmnModal('coll', 'ren',colctn)"><i class="fas fa-edit mr-1"></i>Rename</a>
+                  <a class="dropdown-item curs-ptr" (click)="cmnModal('coll', 'dupl',colctn)"><i
+                      class="fas fa-copy mr-1"></i>Duplicate</a>
+                  <a class="dropdown-item curs-ptr" (click)="cmnModal('coll', 'ren',colctn)"><i
+                      class="fas fa-edit mr-1"></i>Rename</a>
                   <a class="dropdown-item dd">
                     <i class="fa fa-download mr-1"></i>Download
                     <div class="dropdown-menu">
@@ -145,11 +161,12 @@
       </tbody>
     </table>
     <div class="mx-auto mt-5 text-secondary" style="font-size: 20px;" *ngIf="colctnArr.length == 0 && !loading">
-      No Collections Found
+      No Data Found
     </div>
   </div>
   <app-loader [type]="'page'" *ngIf="loading"></app-loader>
 </div>
 
 <!-- fixed div on selecting a collection -->
-<app-sel-itm-fxd-div [selArr]="selColctnArr" [isActive]="this.activeColctn == 1 ? true : false" [type]="'collection'" (actDeact)="actDeactColctn(undefined)" (clrSelData)="clrSel()" *ngIf="selColctnArr.length > 0"></app-sel-itm-fxd-div>
+<app-sel-itm-fxd-div [selArr]="selColctnArr" [isActive]="this.activeColctn == 1 ? true : false" [type]="'collection'"
+  (actDeact)="actDeactColctn(undefined)" (clrSelData)="clrSel()" *ngIf="selColctnArr.length > 0"></app-sel-itm-fxd-div>
