--- a/src/app/web-app/view/view.component.html
+++ b/src/app/web-app/view/view.component.html
@@ -203,6 +203,8 @@
     </div>
   </div>
   <ng-template #noCntnt>
-    No Content found
+    <div class="text-center mt-5 text-secondary" style="font-size: 20px;">
+      No Content Found
+    </div>
   </ng-template>
 </div>
