--- a/src/app/commn/commn.component.html
+++ b/src/app/commn/commn.component.html
@@ -8,7 +8,6 @@
         <mat-tab label="Announcements">
           <div class="communication">
             <div class="buttons-row row mt-3 justify-content-between mx-2">
-              <!-- new announcment trigger modal -->
               <button type="button" class="btn btn-primary" (click)="openModal(anncModal, false)">
                 New Announcement
               </button>
@@ -20,15 +19,15 @@
                   <div class="card-header border-0">
                     <mat-tab-group [selectedIndex]="activeIndex" (selectedTabChange)="onTabChange($event)">
                       <mat-tab label="Sent">
-                        <app-loader [type]="'page'" *ngIf="loading"></app-loader> <!-- loader -->
+                        <app-loader [type]="'page'" *ngIf="loading"></app-loader>
                         <ng-container *ngTemplateOutlet="ancmntTable"></ng-container>
                       </mat-tab>
                       <mat-tab label="Scheduled">
-                        <app-loader [type]="'page'" *ngIf="loading"></app-loader> <!-- loader -->
+                        <app-loader [type]="'page'" *ngIf="loading"></app-loader>
                         <ng-container *ngTemplateOutlet="ancmntTable"></ng-container>
                       </mat-tab>
                       <mat-tab label="Archived">
-                        <app-loader [type]="'page'" *ngIf="loading"></app-loader> <!-- loader -->
+                        <app-loader [type]="'page'" *ngIf="loading"></app-loader>
                         <ng-container *ngTemplateOutlet="ancmntTable"></ng-container>
                       </mat-tab>
                     </mat-tab-group>
@@ -182,7 +181,7 @@
 <ng-template #ancmntTable>
   <div *ngIf="!loading">
     <div class="card-body bg-white rounded-bottom px-0 pb-0">
-      <div class="card-text px-3">
+      <div class="card-text px-3 min-height">
         <table class="table table-hover text-dark w-100" [ngClass]="{'hide-rows': showRowInfo}">
           <thead>
             <tr>
@@ -233,27 +232,6 @@
       </div>
       <app-pagination [pageSize]="pageSize" [totalCount]="totalCount" [page]="pageNo"
         (pageSizeChange)="pageSizeChange($event)" (paginationNum)="paginationNum($event)"></app-pagination>
-      <!-- <div class="card-footer row justify-content-between mx-0">
-        <div class="pages">
-          <mat-form-field appearance="outline" class="mr-2">
-            <mat-select [(ngModel)]="pageSize" (selectionChange)="chngPageSize()">
-              <mat-option *ngFor="let lP of lmtPage" [value]="lP">{{lP}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <span>Showing 1-10 of 100 </span>
-        </div>
-        <ul class="pagination">
-          <li class="page-item disabled">
-            <a class="page-link bg-hi-grey" href="#" tabindex="-1" aria-disabled="true"><i class="fas fa-chevron-left"></i></a>
-          </li>
-          <li class="page-item"><a class="page-link bg-hi-grey" href="#">1</a></li>
-          <li class="page-item"><a class="page-link bg-hi-grey" href="#">2</a></li>
-          <li class="page-item"><a class="page-link bg-hi-grey" href="#">3</a></li>
-          <li class="page-item">
-            <a class="page-link bg-hi-grey" href="#"><i class="fas fa-chevron-right"></i></a>
-          </li>
-        </ul>
-      </div> -->
     </div>
   </div>
 </ng-template>
@@ -285,7 +263,6 @@
         *ngIf="(ancmntForm.get('body')!.touched ||ancmntForm.get('body')!.dirty) && ancmntForm.get('body')!.hasError('required')">
         Announcement is required
       </mat-error>
-      <!-- <textarea matInput placeholder="Body" formControlName="body" rows="3" maxlength="1000" required></textarea> -->
       <mat-form-field appearance="outline"
         [ngClass]="{'mt-1-2': !((ancmntForm.get('body')!.touched ||ancmntForm.get('body')!.dirty) && ancmntForm.get('body')!.hasError('required'))}">
         <mat-label>Send To</mat-label>
@@ -306,7 +283,6 @@
           </mat-chip>
           <input matInput #wrkSpcInp formControlName="usrWrkSpcs" placeholder="Select user workspaces(s)"
             [matAutocomplete]="auto1">
-          <!-- (matChipInputTokenEnd)="add($event)" -->
         </mat-chip-list>
         <mat-autocomplete #auto1="matAutocomplete"
           (optionSelected)="selFromAutoComp($event.option.value,'selWrkSpcs',wrkSpcInp)" [displayWith]="displayFn">
@@ -326,7 +302,6 @@
           </mat-chip>
           <input matInput #grpInp formControlName="usrGrps" placeholder="Select user group(s)"
             [matAutocomplete]="auto2">
-          <!-- (matChipInputTokenEnd)="add($event)" -->
         </mat-chip-list>
         <mat-autocomplete #auto2="matAutocomplete"
           (optionSelected)="selFromAutoComp($event.option.value,'selGrps',grpInp)" [displayWith]="displayFn">
