--- a/src/app/hub/tags/tags.component.html
+++ b/src/app/hub/tags/tags.component.html
@@ -1,15 +1,18 @@
 <app-loader [type]="'page'" *ngIf="catgLoading && tagLoading; else loadPage;"></app-loader>
 <ng-template #loadPage>
   <div class="tags-page row mx-0">
-    <div class="sub-tab-nav row mx-0 mt-4 px-0" [ngClass]="{'col-md-12': !showRowInfo, 'col-md-0 col-lg-7 col-xl-8': showRowInfo}">
+    <div class="sub-tab-nav row mx-0 mt-4 px-0"
+      [ngClass]="{'col-md-12': !showRowInfo, 'col-md-0 col-lg-7 col-xl-8': showRowInfo}">
       <div class="left-side col-lg" [ngClass]="{'col-lg-0': showRowInfo}">
         <div class="card bg-hi-grey" style="min-height:100% !important;">
           <div class="card-body d-flex-lg">
             <div class="flex-lg-1 border-lg pr-3 pr-lg-0">
               <div class="text-hi-dark-grey">Tags</div>
               <ul class="list-unstyled pl-2 mt-1">
-                <li class="dark-bg-hover px-2 py-1 rounded mt-2" [ngClass]="{'act-tag': selTag == 'all'}" (click)="chngTags('all')">All tags</li>
-                <li class="dark-bg-hover px-2 py-1 rounded mt-2" [ngClass]="{'act-tag': selTag == 'uncatg'}" (click)="chngTags('uncatg')">
+                <li class="dark-bg-hover px-2 py-1 rounded mt-2" [ngClass]="{'act-tag': selTag == 'all'}"
+                  (click)="chngTags('all')">All tags</li>
+                <li class="dark-bg-hover px-2 py-1 rounded mt-2" [ngClass]="{'act-tag': selTag == 'uncatg'}"
+                  (click)="chngTags('uncatg')">
                   Uncategorized Tags
                 </li>
               </ul>
@@ -17,16 +20,20 @@
             <div class="flex-lg-1 pt-0 pt-lg-3 pl-3 pr-lg-0">
               <div class="text-hi-dark-grey">
                 Categories
-                <div class="float-right btn p-0" (click)="showCatgIn = !showCatgIn"><i class="fa fa-plus-circle text-primary"></i>
+                <div class="float-right btn p-0" (click)="showCatgIn = !showCatgIn"><i
+                    class="fa fa-plus-circle text-primary"></i>
                 </div>
                 <form name="catgForm" (ngSubmit)="addCatg()" [formGroup]="catgForm" novalidate *ngIf="showCatgIn">
-                  <mat-form-field appearance="outline" class="custom-mat-input sp-mat-input w-100 my-2 flex bg-white" [floatLabel]="'never'">
-                    <input matInput placeholder="Add Category" class="ml-0" formControlName="name" maxlength="100" required />
+                  <mat-form-field appearance="outline" class="custom-mat-input sp-mat-input w-100 my-2 flex bg-white"
+                    [floatLabel]="'never'">
+                    <input matInput placeholder="Add Category" class="ml-0" formControlName="name" maxlength="100"
+                      required />
                     <div matSuffix>
                       <button class="btn btn-secondary input-btn mr-1" (click)="cancelCatg();">
                         <i class="fas fa-times"></i>
                       </button>
-                      <button type="submit" class="btn btn-primary input-btn" [disabled]="catgForm!.invalid || catgAddDisabled">
+                      <button type="submit" class="btn btn-primary input-btn"
+                        [disabled]="catgForm!.invalid || catgAddDisabled">
                         <app-loader [type]="'btn'" *ngIf="catgAddDisabled" class="align-spin-top"></app-loader>
                         <i class="fas fa-check-circle" *ngIf="!catgAddDisabled"></i>
                       </button>
@@ -37,7 +44,9 @@
                   </mat-form-field>
                 </form>
               </div>
-              <ul ngbNav #catgNav="ngbNav" [(activeId)]="activeCatgs" class="nav-tabs justify-content-end border-bottom-0 mr-0 border-color-grey w-100" (activeIdChange)="changeDispCatgs()">
+              <ul ngbNav #catgNav="ngbNav" [(activeId)]="activeCatgs"
+                class="nav-tabs justify-content-end border-bottom-0 mr-0 border-color-grey w-100"
+                (activeIdChange)="changeDispCatgs()">
                 <li [ngbNavItem]="1"><a ngbNavLink>Active</a></li>
                 <li [ngbNavItem]="2"><a ngbNavLink>Disabled</a></li>
               </ul>
@@ -45,19 +54,23 @@
                 <app-loader [type]="'div'" *ngIf="catgLoading; else loadCatgs;"></app-loader>
                 <ng-template #loadCatgs>
                   <ng-container *ngIf="catgs.length > 0; else noCatg">
-                    <li class="dark-bg-hover px-2 py-1 rounded mt-2" *ngFor="let catg of catgs" (click)="chngTags(catg.id)" [ngClass]="{'act-tag': selTag == catg.id}">
+                    <li class="dark-bg-hover px-2 py-1 rounded mt-2" *ngFor="let catg of catgs"
+                      (click)="chngTags(catg.id)" [ngClass]="{'act-tag': selTag == catg.id}">
                       {{catg.name}}
                       <div class="float-right row mx-0">
                         <div class="dropdown">
-                          <div class="dropdown-toggle disable-icon" type="button" id="catEllipsis" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          <div class="dropdown-toggle disable-icon" type="button" id="catEllipsis"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <i class="fa fa-ellipsis-h"></i>
                           </div>
                           <div class="dropdown-menu" aria-labelledby="catEllipsis">
                             <a class="dropdown-item" (click)="updCatgModal(editCategory, catg)">
                               <i class="fas fa-edit mr-1"></i>Edit
                             </a>
-                            <a class="dropdown-item text-{{catg.isActive ? 'primary' : 'success'}}" (click)="actDeactCatg(catg)">
-                              <i class="mr-1 fas" [ngClass]="{'fa-toggle-off': catg.isActive, 'fa-toggle-on': !catg.isActive}"></i>
+                            <a class="dropdown-item text-{{catg.isActive ? 'primary' : 'success'}}"
+                              (click)="actDeactCatg(catg)">
+                              <i class="mr-1 fas"
+                                [ngClass]="{'fa-toggle-off': catg.isActive, 'fa-toggle-on': !catg.isActive}"></i>
                               {{catg.isActive ? 'Deactivate' : 'Activate'}}
                             </a>
                           </div>
@@ -81,23 +94,27 @@
           <div class="card-body rounded-bottom px-0 pb-0">
             <h5 class="card-title px-3">
               <div class="heading">
-                <mat-form-field appearance="outline" class="custom-mat-input float-right mb-3" [floatLabel]="'never'" style="min-width: 300px;">
+                <mat-form-field appearance="outline" class="custom-mat-input float-right mb-3" [floatLabel]="'never'"
+                  style="min-width: 300px;">
                   <i matPrefix class="fa fa-search text-secondary"></i>
                   <input matInput placeholder="Search Tag ..." class="ml-0" #sear [(ngModel)]="searchTxt">
                 </mat-form-field>
                 <div class="search mb-2" *ngIf="tagForm">
                   <form name="tagForm" (ngSubmit)="addTags()" [formGroup]="tagForm" novalidate class="row w-100 mx-0">
-                    <mat-form-field class="custom-mat-input mr-3" appearance="outline" [floatLabel]="'never'" style="flex:1;">
+                    <mat-form-field class="custom-mat-input mr-3" appearance="outline" [floatLabel]="'never'"
+                      style="flex:1;">
                       <mat-chip-list #tagList aria-label="tag selection" formControlName="name">
                         <mat-chip *ngFor="let tg of tagNames" selectable removable (removed)="removeChip(tg)">
                           {{tg}}
                           <i class="fa fa-times" matChipRemove></i>
                         </mat-chip>
-                        <input placeholder="Add Tags (Separate tags by comma or enter)" [matChipInputFor]="tagList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes" matChipInputAddOnBlur (matChipInputTokenEnd)="addChips($event)"
-                          formControlName="name">
+                        <input placeholder="Add Tags (Separate tags by comma or enter)" [matChipInputFor]="tagList"
+                          [matChipInputSeparatorKeyCodes]="separatorKeysCodes" matChipInputAddOnBlur
+                          (matChipInputTokenEnd)="addChips($event)" formControlName="name">
                       </mat-chip-list>
                     </mat-form-field>
-                    <button type="submit" class="btn btn-primary ml-auto" [disabled]="tagForm!.invalid || tagAddDisabled">
+                    <button type="submit" class="btn btn-primary ml-auto"
+                      [disabled]="tagForm!.invalid || tagAddDisabled">
                       <app-loader [type]="'btn'" *ngIf="tagAddDisabled"></app-loader>
                       Create
                     </button>
@@ -105,35 +122,40 @@
                 </div>
               </div>
             </h5>
-            <ul ngbNav #TagsNav="ngbNav" [(activeId)]="activeTags" class="nav-tabs justify-content-end border-bottom-0 mr-3" (activeIdChange)="chngDispTags()">
+            <ul ngbNav #TagsNav="ngbNav" [(activeId)]="activeTags"
+              class="nav-tabs justify-content-end border-bottom-0 mr-3" (activeIdChange)="chngDispTags()">
               <li [ngbNavItem]="1"><a ngbNavLink>Active</a></li>
               <li [ngbNavItem]="2"><a ngbNavLink>Disabled</a></li>
             </ul>
             <app-loader [type]="'page'" *ngIf="tagLoading"></app-loader>
             <div *ngIf="!tagLoading">
-              <div class="card-text px-3">
+              <div class="card-text px-3 min-height">
                 <table class="table table-hover text-dark w-100" [ngClass]="{'hide-rows': showRowInfo}">
                   <thead>
                     <tr>
                       <th class="curs-ptr" *ngFor="let col of cols;let i =index" (click)="sortChange(col,i)">
                         {{col.n}}
-                        <i *ngIf="col.hasOwnProperty('asc')" class="fas ml-1" [ngClass]="{'fa-sort-down align-top': !col.asc, 'fa-sort-up align-bottom': col.asc}"></i>
+                        <i *ngIf="col.hasOwnProperty('asc')" class="fas ml-1"
+                          [ngClass]="{'fa-sort-down align-top': !col.asc, 'fa-sort-up align-bottom': col.asc}"></i>
                       </th>
                     </tr>
                   </thead>
                   <tbody *ngIf="tags.length > 0">
-                    <tr class="curs-ptr" (click)="toggleInfo(tg)" *ngFor="let tg of tags" [ngClass]="{'sel-row':(rowInfo.id === tg.id)}">
+                    <tr class="curs-ptr" (click)="toggleInfo(tg)" *ngFor="let tg of tags"
+                      [ngClass]="{'sel-row':(rowInfo.id === tg.id)}">
                       <td>{{tg.name}}</td>
                       <td class="text-hi-dark-grey">{{tg.isActive?'Active':'In Active'}}</td>
                       <td>{{(tg.updatedDate|date:'dd MMM, yyyy HH:mm')||'N/A'}}</td>
                     </tr>
                   </tbody>
                 </table>
-                <div class="text-center text-secondary" style="min-height: 230px; padding-top:95px;" *ngIf="tags.length == 0">
+                <div class="text-center text-secondary" style="min-height: 230px; padding-top:95px;"
+                  *ngIf="tags.length == 0">
                   No data found
                 </div>
               </div>
-              <app-pagination [pageSize]="pageSize" [totalCount]="totalCount" [page]="pageNo" (pageSizeChange)="pageSizeChange($event)" (paginationNum)="changePageNo($event)"></app-pagination>
+              <app-pagination [pageSize]="pageSize" [totalCount]="totalCount" [page]="pageNo"
+                (pageSizeChange)="pageSizeChange($event)" (paginationNum)="changePageNo($event)"></app-pagination>
             </div>
           </div>
         </div>
