--- a/src/app/web-app/resource/file/file.component.html
+++ b/src/app/web-app/resource/file/file.component.html
@@ -147,8 +147,9 @@
               </div>
             </div>
           </div>
-          <div class="text-center text-secondary" *ngIf="!loading && files.length<=0 && folders.length<=0">
-            No data found
+          <div class="text-center mt-5 text-secondary" style="font-size: 20px;"
+            *ngIf="!loading && files.length<=0 && folders.length<=0">
+            No Data Found
           </div>
         </div>
       </div>
@@ -219,8 +220,8 @@
               </tr>
             </tbody>
           </table>
-          <div class="text-center text-secondary" *ngIf="allFiles.length == 0">
-            No data found
+          <div class="text-center text-secondary mt-5" style="font-size: 20px;" *ngIf="allFiles.length == 0">
+            No Data Found
           </div>
         </div>
       </div>
