--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,9 +5,7 @@
 @import './assets/scss/customizedBootstrap/bootstrap.scss';
 
 // custom styling
-
 // global
-
 html,
 body {
   height: 100%;
@@ -21,7 +19,6 @@ body {
 }
 
 // width classes
-
 .w-40 {
   width: 40% !important;
 }
@@ -207,7 +204,6 @@ button[aria-label="Close"]:focus {
     }
   }
 }
-
 
 // material
 .pdf-view {
@@ -429,12 +425,9 @@ mat-checkbox {
   }
 
   mat-chip {
-    // margin-top: 0 !important;
-    // margin-bottom: 0 !important;
     min-height: 25px !important;
     height: fit-content !important;
     word-break: break-word;
-    // background-color: $primary !important;
 
     .mat-chip-remove {
       width: auto !important;
@@ -450,7 +443,6 @@ mat-checkbox {
 }
 
 .pages {
-
   .mat-form-field-appearance-outline .mat-select-arrow-wrapper {
     transform: translateY(10%);
   }
@@ -498,7 +490,6 @@ mat-checkbox {
 
 // custom file select
 .custom-file-select {
-  // height: 138px;
   position: relative;
   border: 2px $hi-dark-grey dashed;
 
@@ -515,7 +506,6 @@ mat-checkbox {
 
 // files list
 .files-list {
-
   .single-file {
     border: 2px $hi-dark-grey dashed;
 
@@ -532,7 +522,6 @@ mat-checkbox {
 
 // quill editor
 .quill-editor-container {
-
   .ql-container {
     border: 0 !important;
     min-height: 100px;
@@ -769,14 +758,6 @@ header {
         padding-top: 9px !important;
         padding-bottom: 12px !important;
       }
-
-      // .nav-item:hover {
-      //   background-color: lighten($color: $primary, $amount: 10);
-      //   border-left: 5px darken($color: $primary, $amount: 10) solid;
-      //   border-bottom: 5px transparent solid;
-      //   border-top: 5px transparent solid;
-      //   color: white !important;
-      // }
     }
 
     .dropright:hover:not(.active) {
@@ -786,19 +767,6 @@ header {
         color: darken($color: $hi-dark, $amount: 15) !important;
       }
     }
-
-    // .collapse {
-    //   .nav-item {
-    //     a {
-    //       font-size: 1rem;
-
-    //       i {
-    //         font-size: 0.5rem;
-    //       }
-
-    //     }
-    //   }
-    // }
 
     .dropdown-toggle::after {
       transition: opacity 0.5s linear;
@@ -950,10 +918,6 @@ header {
 }
 
 .hide-rows {
-
-  // tr>*:nth-child(2),
-  // tr>*:nth-child(3),
-  // tr>*:nth-child(4),
   tr>*:not(:nth-child(-n + 2)) {
     display: none;
   }
@@ -1033,7 +997,6 @@ header {
           min-height: 134px;
         }
 
-
         img {
           position: absolute;
           top: 50%;
@@ -1051,7 +1014,6 @@ header {
           opacity: 0;
         }
       }
-
     }
 
     .view-main:hover {
@@ -1062,8 +1024,7 @@ header {
   }
 }
 
-// users page
-// users section & groups section
+// users/comm page
 .users-section,
 .groups-section,
 .communication {
@@ -1103,7 +1064,6 @@ header {
       width: 220px;
       transition: box-shadow ease-out 0.5s, transform linear 0.3s;
       position: relative;
-      // background: radial-gradient(circle at 60px 60px, $primary, darken($primary, 30));
       background: linear-gradient($primary, darken($primary, 20));
 
       .text {
@@ -1128,8 +1088,6 @@ header {
 
     // grid view
     .card-container {
-      // max-width: 280px;
-
       .card {
         transition: box-shadow ease-out 0.6s;
 
