removed unnecessary code

--- a/src/app/commn/commn.component.html
+++ b/src/app/commn/commn.component.html
@@ -226,7 +226,7 @@
             </tr>
           </tbody>
         </table>
-        <div class="text-center text-secondary" *ngIf="!loading && ancmnts.length == 0">
+        <div class="text-center text-secondary pt-5 mt-4" *ngIf="!loading && ancmnts.length == 0">
           No Announcement found
         </div>
       </div>
