--- a/src/app/hub/tags/tags.component.html
+++ b/src/app/hub/tags/tags.component.html
@@ -151,7 +151,7 @@
                 </table>
                 <div class="text-center text-secondary" style="min-height: 230px; padding-top:95px;"
                   *ngIf="tags.length == 0">
-                  No data found
+                  No Data Found
                 </div>
               </div>
               <app-pagination [pageSize]="pageSize" [totalCount]="totalCount" [page]="pageNo"
