--- a/src/app/share-link/share-link.component.html
+++ b/src/app/share-link/share-link.component.html
@@ -70,6 +70,6 @@
     </div>
   </ng-container>
   <ng-template #noData>
-    <div class="text-center mt-5">No data found in the share item</div>
+    <div class="text-center mt-5 text-secondaru" style="font-size: 20px;">No data found in the share item</div>
   </ng-template>
 </div>
