--- a/src/app/user/group/group.component.html
+++ b/src/app/user/group/group.component.html
@@ -113,7 +113,7 @@
                   </tr>
                 </tbody>
               </table>
-              <div class="text-center text-secondary" *ngIf="grps.length == 0">
+              <div class="text-center text-secondary pt-5 mt-4" *ngIf="grps.length == 0">
                 No Group found
               </div>
             </div>
