--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -41,7 +41,6 @@
                 </ng-container>
               </ng-template>
               <div class="card-body bg-white rounded-bottom px-0 pb-0">
-                <!-- <ng-container *ngTemplateOutlet="srcHdrTxt"></ng-container> -->
                 <app-loader [type]="'page'" *ngIf="cntntLoading"></app-loader>
                 <ng-container *ngTemplateOutlet="cntntTable"></ng-container>
               </div>
@@ -322,14 +321,6 @@
                                   class="mr-1 fas"></i>
                                 Hide Label in Workspace
                               </li>
-                              <!-- <li><i class="fas fa-check mr-1"></i>Can be downloaded</li>
-                              <ul class="list-unstyled ml-3">
-                                <li><i class="fas fa-check mr-1"></i>Internally</li>
-                                <li><i class="fas fa-check mr-1"></i>Externally</li>
-                              </ul>
-                              <li><i class="fas fa-check mr-1"></i>Can be annotated</li>
-                              <li><i class="fas fa-check mr-1"></i>Pages can be separated</li>
-                              <li><i class="fas fa-times mr-1"></i>Page group are enforced</li> -->
                             </ul>
                           </div>
                         </div>
@@ -342,27 +333,7 @@
                               <li *ngIf="rowInfo.contentType==3">
                                 <mat-checkbox [(ngModel)]="hLW" name="hLW">Hide Label in Workspace</mat-checkbox>
                               </li>
-                              <!-- <li>
-                                <mat-checkbox>Can be downloaded</mat-checkbox>
-                              </li>
-                              <ul class="list-unstyled ml-3">
-                                <li>
-                                  <mat-checkbox>Internally</mat-checkbox>
-                                </li>
-                                <li>
-                                  <mat-checkbox>Externally</mat-checkbox>
-                                </li>
-                              </ul>
-                              <li>
-                                <mat-checkbox>Can be annotated</mat-checkbox>
-                              </li>
-                              <li>
-                                <mat-checkbox>Pages can be separated</mat-checkbox>
-                              </li>
-                              <li>
-                                <mat-checkbox>Page group are enforced</mat-checkbox>
-                              </li>
-                              <li class="ml-2">
+                              <!-- <li class="ml-2">
                                 <div class="row">
                                   <div class="col-5 pr-0">
                                     <mat-form-field appearance="outline" class="custom-mat-input w-100 my-2 bg-white"
@@ -1195,7 +1166,7 @@
       <div class="custom-file-select" appFileDnd *ngIf="urlForm.controls.img && urlForm.value.iconType==2"
         (fileDropped)="onFileDropped($event,true,'urlForm')">
         <input type="file" id="uploadFileInput" (change)="fileBrowseHandler($event ,true,'urlForm')" accept="image/*">
-        <input type="hidden" formControlName="img" /> <!-- Validation Field -->
+        <input type="hidden" formControlName="img" />
         <div class="text-center my-5">
           <h2><i class="fa fa-upload"></i></h2>
           <h5>Drag & Drop file here</h5>
@@ -1244,11 +1215,8 @@
       </mat-form-field>
       <div class="options">
         Options<br />
-        <!-- <mat-checkbox>Show in Kiosk Mode <i class="fa fa-info-circle" matTooltip="Will be displayed when a mobile device is in Kiosk Mode"></i></mat-checkbox><br /> -->
         <mat-checkbox>Can be Shared <i class="fa fa-info-circle"
             matTooltip="Users can share this file via Email, Link,Shared Space or Plugin"></i></mat-checkbox><br />
-        <!-- <mat-checkbox>View in Showpad <i class="fa fa-info-circle"
-            matTooltip="This permission only works for https links"></i></mat-checkbox><br /> -->
         <mat-checkbox formControlName="hideLabelInWorkspace">Hide name in Workspace</mat-checkbox>
       </div>
     </div>
